--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,80 +1,102 @@
 body {
-    font-family: 'Georgia', sans-serif;
-    font-size: 120%;
-    color: #eee8aa;
+  font-family: 'Georgia', sans-serif;
+  font-size: 120%;
+  color: #eee8aa;
 
-    background-color: #000000;
+  background-color: #000000;
 }
 
 #paper {
-    width: 900px;
+  width: 900px;
 
-    margin: 30px auto 30px;
-    padding: 30px 30px 30px 60px;
+  margin: 30px auto 30px;
+  padding: 30px 30px 30px 60px;
 
-    background-color: #203535;
+  background-color: #203535;
 }
 
 #name {
-    display: inline-block;
-    vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .info-text {
-    margin: 10px;
+  margin: 10px;
 
-    line-height: 1.4;
+  line-height: 1.4;
 }
 
 a, a:visited, a:hover, a:active {
-    color: #8ab4f8;
-    text-underline-position: under;
+  color: #8ab4f8;
+  text-underline-position: under;
 }
 
 .paragraph {
-    line-height: 1.3;
-    margin-bottom: 25px;
+  line-height: 1.3;
+  margin-bottom: 25px;
 }
 
 .paragraph > h3 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 footer {
-    text-align: center;
+  text-align: center;
 }
 
 .buttons-block {
-    text-align: center;
+  text-align: center;
 
-    background-color: #355555;
+  background-color: #355555;
 }
 
 .button {
-    background-color: #4CAF50;
-    transition-duration: 0.4s;
+  background-color: #4CAF50;
+  transition-duration: 0.4s;
 
-    border: none;
-    border-radius: 2px;
-    margin: 20px 30px 20px;
+  border: none;
+  border-radius: 2px;
+  margin: 20px 30px 20px;
 
-    color: #ffffff;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  color: #ffffff;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.form-input {
+  flex: 1;
+
+  padding-left: 10px;
+  margin-left: 20px;
+
+  height: 32px;
+
+  font-size: 16px;
+}
+
+.form-input:focus {
+  border: 2px solid #69bd6c;
+  outline: none;
 }
 
 .button:hover {
-    background-color: #69bd6c; /* Green */
-    color: #ffffff;
+  background-color: #69bd6c; /* Green */
+  color: #ffffff;
+}
+
+.form {
+  display: flex;
+
+  align-items: center;
 }
 
 script.to-show {
-    display: block;
-    
-    font-family: monospace;
+  display: block;
+  
+  font-family: monospace;
 
-    white-space: pre;
+  white-space: pre;
 }
