less buttons and input margin

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -70,7 +70,8 @@ footer {
   flex: 1;
 
   padding-left: 10px;
-  margin-left: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 
   height: 32px;
 
