--- a/homework16/styles.css
+++ b/homework16/styles.css
@@ -1,48 +1,39 @@
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-
-  align-items: center;
-
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-
-  overflow: auto; /* Enable scroll if needed */
-
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(255, 255, 255, 0.4); /* Black w/ opacity */
-
-  border: 2px solid red;
+.paper {
+  justify-items: center;
 }
 
-.modal-header {
-    display: flex;
-    text-align: left;
+.pic-wrapper {
+  position: relative;
+
+  width: 300px;
+
+  margin: 0 auto;
+
+  padding: 0;
 }
 
-.modal-header > h4 {
-    display: inline;
-    flex: 1;
+.hide-it {
+  display: none;
 }
 
-.modal-header > .button {
-    background-color: #d96c60;
+#button-left {
+  position: absolute;
+
+  top: 135px;
+
+  width: 30px;
+  height: 30px;
+
+  z-index: 1;
 }
+#button-right {
+  position: absolute;
 
-.modal-header > .button:hover {
-    background-color: #dd776b;
-}
+  top: 135px;
+  right: 0;
 
-.modal-content {
-  margin: auto;
-  padding: 10px 20px 10px;
+  width: 30px;
+  height: 30px;
 
-  text-align: center;
-
-  width: 500px;
-
-  background-color: #355555;
+  z-index: 1;
 }
