--- a/resources/styles.css
+++ b/resources/styles.css
@@ -32,12 +32,24 @@ a, a:visited, a:hover, a:active {
 }
 
 .paragraph {
+  margin-top: -10px;
+}
+
+.paragraph > ul {
+  padding-left: 2em;
   line-height: 1.3;
   margin-bottom: 25px;
 }
 
 .paragraph > h3 {
-  margin-bottom: 10px;
+  margin-bottom: 0px;
+  cursor: pointer;
+
+  max-width: 170px;
+}
+
+.inactive {
+  display: none;
 }
 
 footer {
@@ -114,10 +126,27 @@ footer {
 .waka {
   margin: 0 10px;
 }
+
 script.to-show {
   display: block;
   
   font-family: monospace;
 
   white-space: pre;
+}
+
+ul.pages-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+li.page {
+  margin-left: 0;
+}
+
+li.page::before {
+  content: '\2022';
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
 }
