--- a/homework26/styles.css
+++ b/homework26/styles.css
@@ -28,6 +28,21 @@ form {
   align-items: center;
 }
 
+label {
+  display: block;
+  text-align: center;
+}
+
+.checkbox {
+  display: inline;
+  margin: 5px;
+}
+
+span {
+  display: inline;
+  margin: auto;
+}
+
 input {
   display: block;
 
